--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="col-12 mt-5">
                 <p class="pText text-center container">
-                    <strong>OLEOHIDRÁULICA CÁCERES</strong> fundada en 2013, se presenta como una empresa
+                    <strong>OLEOHIDRÁULICA CÁCERES</strong> fundada hace más de 20 años, se presenta como una empresa
                     nacional especializada en oleohidráulica. Actualmente sus
                     principales actividades son:
                     <strong>importación, fabricación y reparación de máquinas con componentes
