--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@
             <p>© 2022 OLEOHIDRÁULICA CACERES. Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="js/scrollreveal.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
